--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
 }
 
 .author-info {
+    position: absolute;
+    top: 680px;
+    left: 50%;
+    transform: translateX(-50%);
     font-size: 14px;
     text-align: center;
     margin-top: 16px;
@@ -34,7 +38,8 @@ body {
     gap: 14px;
     position: absolute;
     top: 40px;
-    left: 40%;
+    left: 50%;
+    transform: translateX(-50%);
     color: white;
     font-family: "Inter", sans-serif;
 }
@@ -149,10 +154,10 @@ body {
 
 .big_flex {
     display: flex;
-    /* gap: 10px; */
     position: absolute;
     top: 100px;
-    left: 11%;
+    left: 50%;
+    transform: translateX(-50%);
     border-radius: 4px;
 }
 
@@ -175,7 +180,6 @@ body {
     border-width: 2px;
     color: #394150;
     font-family: "Inter", sans-serif;
-    /* border: 4px solid #E5E7EB; */
 }
 
 #pl_7 {
@@ -216,4 +220,286 @@ fieldset {
     color: #FFFFFF;
     font-family: "Inter", sans-serif;
     font-weight: bold;
+}
+
+
+@media only screen and (min-width: 720px) and (max-width: 998px) {
+
+    .author-info {
+        position: absolute;
+        top: 1090px;
+        left: 50%;
+        transform: translateX(-50%);
+        font-size: 14px;
+        text-align: center;
+        margin-top: 16px;
+        color: rgb(55, 65, 81);
+    }
+
+    .author-info a {
+        text-decoration: none;
+    }
+
+    .img-header {
+        width: 100%;
+        height: 150px;
+    }
+
+    .h-head {
+        position: relative;
+    }
+
+    .t-header {
+        display: flex;
+        align-items: center;
+        gap: 14px;
+        position: absolute;
+        top: 30px;
+        left: 50%;
+        transform: translateX(-50%);
+        color: white;
+        font-family: "Inter", sans-serif;
+    }
+
+    #it_3 {
+        margin-top: 7px;
+        background-color: #1D1D1F;
+        border-radius: 40px;
+        width: 100px;
+        height: 25px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .big_flex {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        top: 90px;
+        left: 50%;
+        transform: translateX(-50%);
+        border-radius: 4px;
+    }
+
+    .left_side {
+        background-color: #E5E7EB;
+        height: auto;
+        padding: 20px;
+        width: 45rem;
+        border-radius: 10px 10px 0 0;
+    }
+
+    .right_side {
+        background-color: #FFFFFF;
+        height: auto;
+        padding: 30px 20px;
+        width: 45rem;
+        border-radius: 0 0 10px 10px ;
+    }
+
+    .prod_flex {
+    display: flex;
+    justify-content: space-between;
+    padding: 5px 0;
+    }
+
+    .inner_flex {
+    display: flex;
+    gap: 15px;
+    }
+
+    .prod_img_center {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .prod_img {
+        background-color: #F3F4F6;
+        height: 100px;
+        width: 95px;
+        border-radius: 4px;
+    }
+
+    .prod_img img{
+        height: 80px;
+        width: 40px;
+    }
+
+    #coupon_code {
+        height: 40px;
+        width: 540px;
+        border-radius: 4px;
+        border-style: none;
+        padding-left: 8px;
+    }
+
+    #coup_btn {
+        height: 40px;
+        width: 120px;
+        color: white;
+        background-color: #1D1D1F;
+        border-radius: 8px;
+        font-family: "Inter", sans-serif;
+    }
+
+    .field_flex {
+        display: flex;
+        gap: 78px;
+    }
+
+    #pl_7 {
+        padding-left: 8px;
+        height: 50px;
+        width: 300px;
+        border-radius: 4px;
+        border-style: solid;
+        border-color: #D2D5DA;
+        background-color: #E5E7EB;
+        border-width: 2px;
+        color: #394150;
+        font-family: "Inter", sans-serif;
+    }
+}
+
+
+@media only screen and (max-width: 600px) {
+
+    .author-info {
+        position: absolute;
+        top: 1020px;
+        left: 50%;
+        transform: translateX(-50%);
+        font-size: 14px;
+        text-align: center;
+        margin-top: 16px;
+        color: rgb(55, 65, 81);
+    }
+
+    .author-info a {
+        text-decoration: none;
+    }
+
+    .img-header {
+        width: 100%;
+        height: 150px;
+    }
+
+    .h-head {
+        position: relative;
+    }
+
+    .t-header {
+        display: flex;
+        align-items: center;
+        gap: 14px;
+        position: absolute;
+        top: 30px;
+        left: 50%;
+        transform: translateX(-50%);
+        color: white;
+        font-family: "Inter", sans-serif;
+    }
+
+    #it_3 {
+        margin-top: 7px;
+        background-color: #1D1D1F;
+        border-radius: 40px;
+        width: 100px;
+        height: 25px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .big_flex {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        top: 90px;
+        left: 50%;
+        transform: translateX(-50%);
+        border-radius: 4px;
+    }
+
+    .left_side {
+        background-color: #E5E7EB;
+        height: auto;
+        padding: 5px;
+        width: 23rem;
+        border-radius: 10px 10px 0 0;
+    }
+
+    .right_side {
+        background-color: #FFFFFF;
+        height: auto;
+        padding: 10px 5px;
+        width: 23rem;
+        border-radius: 0 0 10px 10px;
+    }
+
+    .prod_flex {
+    display: flex;
+    justify-content: space-between;
+    padding: 5px 0;
+    }
+
+    .inner_flex {
+    display: flex;
+    gap: 3px;
+    }
+
+    .prod_img_center {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .prod_img {
+        background-color: #F3F4F6;
+        height: 55px;
+        width: 40px;
+        border-radius: 4px;
+    }
+
+    .prod_img img{
+        height: 45px;
+        width: 20px;
+    }
+
+    #coupon_code {
+        height: 40px;
+        width: 220px;
+        border-radius: 4px;
+        border-style: none;
+        padding-left: 8px;
+    }
+
+    #coup_btn {
+        height: 40px;
+        width: 120px;
+        color: white;
+        background-color: #1D1D1F;
+        border-radius: 8px;
+        font-family: "Inter", sans-serif;
+    }
+
+    .field_flex {
+        display: flex;
+        gap: 10px;
+    }
+
+    #pl_7 {
+        padding-left: 8px;
+        height: 50px;
+        width: 174px;
+        border-radius: 4px;
+        border-style: solid;
+        border-color: #D2D5DA;
+        background-color: #E5E7EB;
+        border-width: 2px;
+        color: #394150;
+        font-family: "Inter", sans-serif;
+    }
 }
