--- a/style.css
+++ b/style.css
@@ -364,7 +364,7 @@ fieldset {
 }
 
 
-@media only screen and (max-width: 600px) {
+@media only screen  and (min-width: 393px) and (max-width: 719px)  {
 
     .author-info {
         position: absolute;
@@ -501,5 +501,147 @@ fieldset {
         border-width: 2px;
         color: #394150;
         font-family: "Inter", sans-serif;
+    }
+}
+
+@media only screen  and (max-width: 392px) {
+
+    .author-info {
+        position: absolute;
+        top: 1020px;
+        left: 50%;
+        transform: translateX(-50%);
+        font-size: 14px;
+        text-align: center;
+        margin-top: 16px;
+        color: rgb(55, 65, 81);
+    }
+
+    .author-info a {
+        text-decoration: none;
+    }
+
+    .img-header {
+        width: 100%;
+        height: 150px;
+    }
+
+    .h-head {
+        position: relative;
+    }
+
+    .t-header {
+        display: flex;
+        align-items: center;
+        gap: 14px;
+        position: absolute;
+        top: 30px;
+        left: 50%;
+        transform: translateX(-50%);
+        color: white;
+        font-family: "Inter", sans-serif;
+        font-size: 12px;
+    }
+
+    #it_3 {
+        margin-top: 7px;
+        background-color: #1D1D1F;
+        border-radius: 40px;
+        width: 80px;
+        height: 25px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .big_flex {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        top: 90px;
+        left: 50%;
+        transform: translateX(-50%);
+        border-radius: 4px;
+    }
+
+    .left_side {
+        background-color: #E5E7EB;
+        height: auto;
+        padding: 5px;
+        width: 20rem;
+        border-radius: 10px 10px 0 0;
+    }
+
+    .right_side {
+        background-color: #FFFFFF;
+        height: auto;
+        padding: 10px 5px;
+        width: 20rem;
+        border-radius: 0 0 10px 10px;
+    }
+
+    .prod_flex {
+        display: flex;
+        justify-content: space-between;
+        padding: 5px 0;
+    }
+
+    .inner_flex {
+        display: flex;
+        gap: 3px;
+    }
+
+    .prod_img_center {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .prod_img {
+        background-color: #F3F4F6;
+        height: 55px;
+        width: 40px;
+        border-radius: 4px;
+    }
+
+    .prod_img img{
+        height: 45px;
+        width: 20px;
+    }
+
+    #coupon_code {
+        height: 40px;
+        width: 180px;
+        border-radius: 4px;
+        border-style: none;
+        padding-left: 8px;
+    }
+
+    #coup_btn {
+        height: 40px;
+        width: 120px;
+        color: white;
+        background-color: #1D1D1F;
+        border-radius: 8px;
+        font-family: "Inter", sans-serif;
+    }
+
+    .field_flex {
+        display: flex;
+        gap: 10px;
+    }
+
+    #pl_7 {
+        padding-left: 8px;
+        height: 50px;
+        width: 150px;
+        border-radius: 4px;
+        border-style: solid;
+        border-color: #D2D5DA;
+        background-color: #E5E7EB;
+        border-width: 2px;
+        color: #394150;
+        font-family: "Inter", sans-serif;
+        font-size: small;
     }
 }
